[package]
name = "sql-gis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
byteorder = "1.5.0"
paste = "1.0.15"
sea-orm = "0.12.15"
sea-query = "0.30.7"
serde = "1.0.203"
serde_json = "1.0.120"
testcontainers = "0.19.0"
sqlx = { version = "0.7.4", features = ["sqlite", "postgres", "macros", "runtime-tokio"] }
hex = "0.4.3"
