[package]
name = "sql-gis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
paste = "1.0.15"
serde = "1.0.203"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [
  "sqlite",
  "postgres",
  "macros",
  "runtime-tokio",
], optional = true }

[features]
default = ["sqlx", "geojson", "postgis", "spatialite"]
postgis = ["sqlx", "sqlx/postgres"]
spatialite = ["sqlx", "sqlx/sqlite"]
sqlx = ["dep:sqlx"]
geojson = []
